Email sender added     Now it will send you activation link     before registration will be finished.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/RBS
 spring.datasource.username=root
 spring.datasource.password=Karamach123
+#Mail-config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nkaramach@gmail.com
+spring.mail.password=pupsik123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.transport.protocol=smtp
