--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,14 @@
             <artifactId>spring-boot-starter-mustache</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.1.1.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
