--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.password=Karamach123
 #Mail-config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=nkaramach@gmail.com
-spring.mail.password=pupsik123
+spring.mail.username=123@gmail.com
+spring.mail.password=123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
