--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
             <version>2.1.1.RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.1.1.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
